modifications on package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http:/MahmoudFarid296.github.io/profile-fetcher",
+  "homepage": "http:/MahmoudFarid296.github.io/GitHub-profile-fetcher",
   "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
